# ERP

./: .gitignore  Dockerfile.railway  railway.json
.github/workflows/: dotnet-desktop.yml
ERP/: .env.example  ARXIS-INTEGRATION.md  Cargo.toml  DOMINIO-CUSTOMIZADO.md  Dockerfile  RAILWAY-DEPLOY.md  README.md  SETUP-DEPLOY.md  STATUS-DEPLOY.md  deploy-railway.ps1  deploy-simple.ps1  docker-compose.yml  nginx.conf
ERP/.github/workflows/: deploy.yml
ERP/avila-ai-workspace/: Cargo.toml  aviladb.toml
ERP/avila-ai-workspace/avila-crypto/src/hash/: blake3.rs
ERP/avila-cell/: Cargo.toml
ERP/avila-compress/target_local/debug/: libavila_compress.d
ERP/avila-compress/target_local/debug/incremental/avila_async-03icw46uwo890/s-hdiezhd36c-1tgaywa-71z3jjyjje5yj5t9qhxhijetg/: metadata.rmeta
ERP/avila-compress/target_local/debug/incremental/avila_compress-17c37urfh2nhj/s-hdiey5qhs6-18tzxcz-e039lpwbluv4gm1oboo8u48v4/: metadata.rmeta
ERP/avila-compress/target_local/debug/incremental/avila_future-2sdt4am32xxpm/s-hdiezwujao-0gybuwe-chvd3ekpgimgl1olazk3eqfwk/: metadata.rmeta
ERP/avila-compress/target_local/debug/incremental/avila_rand-31okeh9m0483b/s-hdif0hqlca-10i8c0c-1jiyn89vw1eavrgdbglxxjtie/: metadata.rmeta
ERP/avila-core-workspace/: Cargo.toml
ERP/avila-db/: Cargo.toml
ERP/avila-db/src/: compression.rs  http.rs
ERP/avila-distributed-system/: Cargo.toml
ERP/avila-distributed-system/examples/: distributed_email.rs  gossip_demo.rs  mycelium_network.rs
ERP/avila-distributed-system/src/: gossip.rs  lib.rs  mycelium.rs
ERP/avila-error-old/: Cargo.toml
ERP/avila-examples/crypto-email/: Cargo.toml
ERP/avila-examples/crypto-email/src/: main.rs
ERP/avila-linalg/: Cargo.toml
ERP/avila-linalg/src/decomposition/: mod.rs
ERP/avila-nucleus/: Cargo.toml
ERP/avila-organ/: Cargo.toml
ERP/avila-organ/examples/: auth_demo.rs
ERP/avila-organ/src/: auth.rs  client.rs  server.rs
ERP/avila-organism/: Cargo.toml
ERP/avila-organism/examples/: full_email_flow.rs  webmail_demo.rs
ERP/avila-organism/src/: webmail.rs
ERP/avila-regex/: PRODUCTION_CHECKLIST.md  README.md
ERP/avila-regex/src/: ast.rs  compiler.rs  lib.rs  parser.rs  vm.rs
ERP/avila-serde-old/: Cargo.toml
ERP/avila-tissue/: Cargo.toml
ERP/avila-tissue/examples/: search_demo.rs
ERP/avila-tissue/src/: index.rs  lib.rs  mailbox.rs  search.rs  storage.rs
ERP/backend/: Cargo.toml
ERP/backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  mongodb.rs
ERP/backend/src/models/: cliente.rs  mod.rs  produto.rs  venda.rs
ERP/backend/src/routes/: clientes.rs  dashboard.rs  mod.rs  produtos.rs  vendas.rs
ERP/database/seeds/: test_data.sql
ERP/frontend/: index.html
ERP/frontend-wasm/: Cargo.toml  README.md  build.ps1  index.html  serve.ps1
ERP/frontend-wasm/src/: api.rs  components.rs  lib.rs  models.rs
ERP/frontend-wasm/src/pages/: clientes.rs  dashboard.rs  mod.rs  produtos.rs  vendas.rs
