[package]
name = "avila-organ"
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Email organ - Complete server and client system"
repository = "https://github.com/avilaops/arxis"
keywords = ["email", "server", "client", "smtp", "imap"]

[dependencies]
avila-tissue = { version = "0.1.0", path = "../avila-tissue" }
tokio = { version = "1", features = ["full"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
incremental = false

[profile.dev]
opt-level = 1
