
[package]
name = "avila-organism"
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Email platform application layer - Complete system with webmail, REST API, and admin interface"
repository = "https://github.com/avilaops/arxis"
keywords = ["email", "platform", "webmail", "api"]

[[bin]]
name = "avila-mail-server"
path = "src/bin/server.rs"

[[bin]]
name = "avila-mail-cli"
path = "src/bin/cli.rs"

[dependencies]
# Core Avila components - NO external dependencies
avila-tissue = { version = "0.1.0", path = "../avila-tissue" }
avila-organ = { version = "0.1.0", path = "../avila-organ" }
avila-async = { version = "0.5.0", path = "../avila-async" }

# Minimal required external deps (will be eliminated)
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.dev]
opt-level = 1
