[package]
name = "avila-erp-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Frontend framework do Arxis
avila-frontend = { path = "../../../arxis/avila-frontend" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlFormElement",
    "HtmlSelectElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableCellElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
